--- a/OverlayGrid/Pages/Index.razor
+++ b/OverlayGrid/Pages/Index.razor
@@ -3,5 +3,7 @@
 <MatNumericUpDownField Label="Height" @bind-Value="Height" />
 <MatNumericUpDownField Label="Width" @bind-Value="Width" />
 <MatButton @onclick="DrawCanvas">Draw</MatButton>
-
+<MatFileUpload Label="Drag your image here" OnChange="UploadImageAsync" />
 <DrawGrid Height="@Height" Width="@Width" />
+<SnackBar @ref="_snackBar" />
+
