--- a/OverlayGrid/Pages/DrawGrid.razor
+++ b/OverlayGrid/Pages/DrawGrid.razor
@@ -1,3 +1,3 @@
 ﻿@page "/DrawGrid"
-<img @ref="imageToBeLoaded" src="data:image/png;base64, @imageSource" style="display: none;"/>
+<img @ref="ImageToBeLoaded" src="data:image/png;base64, @ImageSource" style="display: none;"/>
 <BECanvas Width="@Width" Height="@Height" @ref="_canvasReference"></BECanvas>
