--- a/OverlayGrid/Pages/Index.razor
+++ b/OverlayGrid/Pages/Index.razor
@@ -1,4 +1,4 @@
 ﻿@page "/"
-<MatFileUpload Label="Drag your image here or click to upload." OnChange="UploadImageAsync" Style="width: 200px; height: 30px;" />
+<MatFileUpload Label="Drag your image here or click to upload." OnChange="UploadImageAsync" Style="width: 680px;" />
 <DrawGrid @ref="_drawGrid" />
 <SnackBar @ref="_snackBar" />
